--- a/css.css
+++ b/css.css
@@ -39,5 +39,5 @@ h4{
   margin-top:20px; margin-right:15px; margin-bottom:20px; margin-left:60px; color:white;
   }
 audio{
-transform: translate(380%, -50%);
+margin-top:20px; margin-right:15px; margin-bottom:10px; margin-left:60px;
 }
